Fix section spacing

--- a/shared/scss/base/base.scss
+++ b/shared/scss/base/base.scss
@@ -34,7 +34,7 @@ div {
 
     &.menu-title {
         font-weight: bold;
-        padding: 14px 0;
+        padding: 24px 0 14px;
     }
 }
 
@@ -52,7 +52,7 @@ li {
         // Handle space between the last element in the container and the divider
         > :last-child {
             padding-bottom: 0;
-            margin-bottom: 16px;
+            margin-bottom: 24px;
         }
     }
 }
