--- a/shared/scss/views/_allowlist.scss
+++ b/shared/scss/views/_allowlist.scss
@@ -6,7 +6,7 @@
     font-weight: 600;
 
     .menu-title {
-        padding: 20px 0 4px;
+        padding: 24px 0 4px;
     }
 
     .menu-paragraph {
