--- a/shared/scss/views/_extension-page.scss
+++ b/shared/scss/views/_extension-page.scss
@@ -4,6 +4,7 @@
 .page-container {
     width: 400px;
     margin: 3em auto auto auto;
+    padding-bottom: 40px;
     position: relative;
 
     p {
@@ -23,8 +24,6 @@
 }
 
 .options-content__privacy {
-    padding-bottom: 8px;
-
     .menu-paragraph {
         font-weight: normal;
         line-height: 1.4;
